# GSR

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
cmake/: enable_and_build_autotests.cmake
source/: gs_math.hpp  main.cpp
source/autotests/: gs_autotests_matrixes.cpp  gs_autotests_utilities.cpp  gs_autotests_vectors.cpp
tools/: glad.cmake  glfw.cmake
tools/glad/: CMakeLists.txt
tools/glad/include/glad/: glad.h
tools/glad/src/: glad.c
